<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/find_us"
        android:title="@string/find_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/offer"
        android:title="@string/offer"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/rate"
        android:title="Rate App"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:title="Settings"
        app:showAsAction="never" />

</menu>