<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"

    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textColor="@color/sky"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <TextView
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/please_verify_your_email_address"
        android:layout_gravity="center"
        android:textSize="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14" />


    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/sky"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLength="30"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_reset" />
    <Button
        android:layout_marginTop="15dp"
        android:text="@string/reset_password"
        android:padding="15dp"
        android:layout_gravity="center"
        android:background="@color/sky"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_pass" />
</LinearLayout>

